refactor(User): rewrite post endpoint to use lambdas
